--- a/components/ab-grid/style.css
+++ b/components/ab-grid/style.css
@@ -13,11 +13,11 @@
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
 
-  -webkit-transition: -webkit-transform 250ms ease;
-  -moz-transition: -moz-transform 250ms ease;
-  -ms-transition: -ms-transform 250ms ease;
-  -o-transition: -o-transform 250ms ease;
-  transition: transform 250ms ease;
+  -webkit-transition: top 250ms ease, left 250ms ease;
+  -moz-transition: top 250ms ease, left 250ms ease;
+  -ms-transition: top 250ms ease, left 250ms ease;
+  -o-transition: top 250ms ease, left 250ms ease;
+  transition: top 250ms ease, left 250ms ease;
 
   background-color: white;
 
@@ -39,6 +39,10 @@
   border-right: 2px solid #ccc;
 }
 
+:host > *.moving {
+  opacity: 0.7;
+}
+
 #placeholder {
 
   border: 2px dashed rgba(0, 112, 255, 0.5);
@@ -57,4 +61,19 @@
 
 #placeholder::after {
   border: none;
+}
+
+[draggable] {
+  -moz-user-select: none;
+  -khtml-user-select: none;
+  -webkit-user-select: none;
+  user-select: none;
+  /* Required to make elements draggable in old WebKit */
+  -khtml-user-drag: element;
+  -webkit-user-drag: element;
+}
+
+.dragged {
+  display: block;
+  background-color: #fff;
 }
