Drag & drop kind of working

--- a/components/ab-grid/index.html
+++ b/components/ab-grid/index.html
@@ -6,7 +6,7 @@
   <template>
     <link rel="stylesheet" type="text/css" href="style.css">
     <content id="content" select="*"></content>
-    <div id="placeholder"></div>
+    <div id="placeholder" class="move-transition"></div>
   </template>
   <script src="scripts/grid-layout.js"></script>
   <script src="scripts/ab-grid.js"></script>
